Add RSA gen Gradle task and update README.